// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selection style params color brand 1`] = `
<DocumentFragment>
  <label
    class="QxSelection QxSelection_type_text QxSelection_color_brand QxSelection_size_medium css-xzgqft-QxSelection-root"
    data-testid="testStyleParams-color-brand"
    tabindex="-1"
  >
    <div
      class="QxSelection-content css-a7yohm-QxSelection-content"
    >
      <div
        class="QxSelection-controller css-ucexof-QxSelection-controller"
      >
        <label
          class="QxCheckbox QxCheckbox_size_medium QxCheckbox_color_brand QxCheckbox_borderRadius_medium css-1lgh59g-QxCheckbox-root"
        >
          <input
            class="QxCheckbox-input css-zk3nke-QxCheckbox-input"
            tabindex="0"
            type="checkbox"
            value=""
          />
          <div
            class="QxCheckbox-checkboxContainer css-elag4i-QxCheckbox-checkboxContainer"
          >
            <div
              class="QxCheckbox-overlay css-14q538t-QxCheckbox-overlay"
            >
              <svg
                class="QxCheckbox-icon css-7yff3i-QxCheckbox-icon"
                fill="currentcolor"
                height="8"
                viewBox="0 0 11 8"
                width="11"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M2.03616 3.36025C1.68516 3.00925 1.11546 3.00925 0.763559 3.36025C0.411659 3.71215 0.411659 4.28185 0.763559 4.63375L4.09896 7.96915L10.1398 1.93645C10.4917 1.58545 10.4917 1.01575 10.1407 0.663847C9.78876 0.312847 9.21906 0.311947 8.86716 0.662947L4.09986 5.42395L2.03616 3.36025Z"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </div>
        </label>
      </div>
      <div
        class="QxSelection-texts css-zluihr-QxSelection-texts"
      >
        <span
          class="QxSelection-title css-11ny95e-QxSelection-title"
        >
          Title
        </span>
        <span
          class="QxSelection-description css-11pkris-QxSelection-description"
        >
          Description
        </span>
        <span
          class="QxSelection-helperText css-1ch7yhl-QxSelection-helperText"
        >
          HelperText
        </span>
      </div>
    </div>
  </label>
</DocumentFragment>
`;

exports[`Selection style params color danger 1`] = `
<DocumentFragment>
  <label
    class="QxSelection QxSelection_type_text QxSelection_color_danger QxSelection_size_medium css-xzgqft-QxSelection-root"
    data-testid="testStyleParams-color-danger"
    tabindex="-1"
  >
    <div
      class="QxSelection-content css-a7yohm-QxSelection-content"
    >
      <div
        class="QxSelection-controller css-ucexof-QxSelection-controller"
      >
        <label
          class="QxCheckbox QxCheckbox_size_medium QxCheckbox_color_danger QxCheckbox_borderRadius_medium css-1lgh59g-QxCheckbox-root"
        >
          <input
            class="QxCheckbox-input css-jorhu0-QxCheckbox-input"
            tabindex="0"
            type="checkbox"
            value=""
          />
          <div
            class="QxCheckbox-checkboxContainer css-533jna-QxCheckbox-checkboxContainer"
          >
            <div
              class="QxCheckbox-overlay css-14q538t-QxCheckbox-overlay"
            >
              <svg
                class="QxCheckbox-icon css-1kxo616-QxCheckbox-icon"
                fill="currentcolor"
                height="8"
                viewBox="0 0 11 8"
                width="11"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M2.03616 3.36025C1.68516 3.00925 1.11546 3.00925 0.763559 3.36025C0.411659 3.71215 0.411659 4.28185 0.763559 4.63375L4.09896 7.96915L10.1398 1.93645C10.4917 1.58545 10.4917 1.01575 10.1407 0.663847C9.78876 0.312847 9.21906 0.311947 8.86716 0.662947L4.09986 5.42395L2.03616 3.36025Z"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </div>
        </label>
      </div>
      <div
        class="QxSelection-texts css-zluihr-QxSelection-texts"
      >
        <span
          class="QxSelection-title css-11ny95e-QxSelection-title"
        >
          Title
        </span>
        <span
          class="QxSelection-description css-11pkris-QxSelection-description"
        >
          Description
        </span>
        <span
          class="QxSelection-helperText css-j8ingd-QxSelection-helperText"
        >
          HelperText
        </span>
      </div>
    </div>
  </label>
</DocumentFragment>
`;

exports[`Selection style params color info 1`] = `
<DocumentFragment>
  <label
    class="QxSelection QxSelection_type_text QxSelection_color_info QxSelection_size_medium css-xzgqft-QxSelection-root"
    data-testid="testStyleParams-color-info"
    tabindex="-1"
  >
    <div
      class="QxSelection-content css-a7yohm-QxSelection-content"
    >
      <div
        class="QxSelection-controller css-ucexof-QxSelection-controller"
      >
        <label
          class="QxCheckbox QxCheckbox_size_medium QxCheckbox_color_info QxCheckbox_borderRadius_medium css-1lgh59g-QxCheckbox-root"
        >
          <input
            class="QxCheckbox-input css-jorhu0-QxCheckbox-input"
            tabindex="0"
            type="checkbox"
            value=""
          />
          <div
            class="QxCheckbox-checkboxContainer css-1n2tcwi-QxCheckbox-checkboxContainer"
          >
            <div
              class="QxCheckbox-overlay css-14q538t-QxCheckbox-overlay"
            >
              <svg
                class="QxCheckbox-icon css-1kxo616-QxCheckbox-icon"
                fill="currentcolor"
                height="8"
                viewBox="0 0 11 8"
                width="11"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M2.03616 3.36025C1.68516 3.00925 1.11546 3.00925 0.763559 3.36025C0.411659 3.71215 0.411659 4.28185 0.763559 4.63375L4.09896 7.96915L10.1398 1.93645C10.4917 1.58545 10.4917 1.01575 10.1407 0.663847C9.78876 0.312847 9.21906 0.311947 8.86716 0.662947L4.09986 5.42395L2.03616 3.36025Z"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </div>
        </label>
      </div>
      <div
        class="QxSelection-texts css-zluihr-QxSelection-texts"
      >
        <span
          class="QxSelection-title css-11ny95e-QxSelection-title"
        >
          Title
        </span>
        <span
          class="QxSelection-description css-11pkris-QxSelection-description"
        >
          Description
        </span>
        <span
          class="QxSelection-helperText css-1dl4pyn-QxSelection-helperText"
        >
          HelperText
        </span>
      </div>
    </div>
  </label>
</DocumentFragment>
`;

exports[`Selection style params color secondary 1`] = `
<DocumentFragment>
  <label
    class="QxSelection QxSelection_type_text QxSelection_color_secondary QxSelection_size_medium css-xzgqft-QxSelection-root"
    data-testid="testStyleParams-color-secondary"
    tabindex="-1"
  >
    <div
      class="QxSelection-content css-a7yohm-QxSelection-content"
    >
      <div
        class="QxSelection-controller css-ucexof-QxSelection-controller"
      >
        <label
          class="QxCheckbox QxCheckbox_size_medium QxCheckbox_color_secondary QxCheckbox_borderRadius_medium css-1lgh59g-QxCheckbox-root"
        >
          <input
            class="QxCheckbox-input css-zk3nke-QxCheckbox-input"
            tabindex="0"
            type="checkbox"
            value=""
          />
          <div
            class="QxCheckbox-checkboxContainer css-19bj5x3-QxCheckbox-checkboxContainer"
          >
            <div
              class="QxCheckbox-overlay css-14q538t-QxCheckbox-overlay"
            >
              <svg
                class="QxCheckbox-icon css-7yff3i-QxCheckbox-icon"
                fill="currentcolor"
                height="8"
                viewBox="0 0 11 8"
                width="11"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M2.03616 3.36025C1.68516 3.00925 1.11546 3.00925 0.763559 3.36025C0.411659 3.71215 0.411659 4.28185 0.763559 4.63375L4.09896 7.96915L10.1398 1.93645C10.4917 1.58545 10.4917 1.01575 10.1407 0.663847C9.78876 0.312847 9.21906 0.311947 8.86716 0.662947L4.09986 5.42395L2.03616 3.36025Z"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </div>
        </label>
      </div>
      <div
        class="QxSelection-texts css-zluihr-QxSelection-texts"
      >
        <span
          class="QxSelection-title css-11ny95e-QxSelection-title"
        >
          Title
        </span>
        <span
          class="QxSelection-description css-11pkris-QxSelection-description"
        >
          Description
        </span>
        <span
          class="QxSelection-helperText css-azkkhf-QxSelection-helperText"
        >
          HelperText
        </span>
      </div>
    </div>
  </label>
</DocumentFragment>
`;

exports[`Selection style params color success 1`] = `
<DocumentFragment>
  <label
    class="QxSelection QxSelection_type_text QxSelection_color_success QxSelection_size_medium css-xzgqft-QxSelection-root"
    data-testid="testStyleParams-color-success"
    tabindex="-1"
  >
    <div
      class="QxSelection-content css-a7yohm-QxSelection-content"
    >
      <div
        class="QxSelection-controller css-ucexof-QxSelection-controller"
      >
        <label
          class="QxCheckbox QxCheckbox_size_medium QxCheckbox_color_success QxCheckbox_borderRadius_medium css-1lgh59g-QxCheckbox-root"
        >
          <input
            class="QxCheckbox-input css-jorhu0-QxCheckbox-input"
            tabindex="0"
            type="checkbox"
            value=""
          />
          <div
            class="QxCheckbox-checkboxContainer css-dkxqeu-QxCheckbox-checkboxContainer"
          >
            <div
              class="QxCheckbox-overlay css-14q538t-QxCheckbox-overlay"
            >
              <svg
                class="QxCheckbox-icon css-1kxo616-QxCheckbox-icon"
                fill="currentcolor"
                height="8"
                viewBox="0 0 11 8"
                width="11"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M2.03616 3.36025C1.68516 3.00925 1.11546 3.00925 0.763559 3.36025C0.411659 3.71215 0.411659 4.28185 0.763559 4.63375L4.09896 7.96915L10.1398 1.93645C10.4917 1.58545 10.4917 1.01575 10.1407 0.663847C9.78876 0.312847 9.21906 0.311947 8.86716 0.662947L4.09986 5.42395L2.03616 3.36025Z"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </div>
        </label>
      </div>
      <div
        class="QxSelection-texts css-zluihr-QxSelection-texts"
      >
        <span
          class="QxSelection-title css-11ny95e-QxSelection-title"
        >
          Title
        </span>
        <span
          class="QxSelection-description css-11pkris-QxSelection-description"
        >
          Description
        </span>
        <span
          class="QxSelection-helperText css-ndyhqy-QxSelection-helperText"
        >
          HelperText
        </span>
      </div>
    </div>
  </label>
</DocumentFragment>
`;

exports[`Selection style params color warning 1`] = `
<DocumentFragment>
  <label
    class="QxSelection QxSelection_type_text QxSelection_color_warning QxSelection_size_medium css-xzgqft-QxSelection-root"
    data-testid="testStyleParams-color-warning"
    tabindex="-1"
  >
    <div
      class="QxSelection-content css-a7yohm-QxSelection-content"
    >
      <div
        class="QxSelection-controller css-ucexof-QxSelection-controller"
      >
        <label
          class="QxCheckbox QxCheckbox_size_medium QxCheckbox_color_warning QxCheckbox_borderRadius_medium css-1lgh59g-QxCheckbox-root"
        >
          <input
            class="QxCheckbox-input css-jorhu0-QxCheckbox-input"
            tabindex="0"
            type="checkbox"
            value=""
          />
          <div
            class="QxCheckbox-checkboxContainer css-1wiwc86-QxCheckbox-checkboxContainer"
          >
            <div
              class="QxCheckbox-overlay css-14q538t-QxCheckbox-overlay"
            >
              <svg
                class="QxCheckbox-icon css-1kxo616-QxCheckbox-icon"
                fill="currentcolor"
                height="8"
                viewBox="0 0 11 8"
                width="11"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M2.03616 3.36025C1.68516 3.00925 1.11546 3.00925 0.763559 3.36025C0.411659 3.71215 0.411659 4.28185 0.763559 4.63375L4.09896 7.96915L10.1398 1.93645C10.4917 1.58545 10.4917 1.01575 10.1407 0.663847C9.78876 0.312847 9.21906 0.311947 8.86716 0.662947L4.09986 5.42395L2.03616 3.36025Z"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </div>
        </label>
      </div>
      <div
        class="QxSelection-texts css-zluihr-QxSelection-texts"
      >
        <span
          class="QxSelection-title css-11ny95e-QxSelection-title"
        >
          Title
        </span>
        <span
          class="QxSelection-description css-11pkris-QxSelection-description"
        >
          Description
        </span>
        <span
          class="QxSelection-helperText css-rsap5p-QxSelection-helperText"
        >
          HelperText
        </span>
      </div>
    </div>
  </label>
</DocumentFragment>
`;

exports[`Selection style params disableFocus false 1`] = `
<DocumentFragment>
  <label
    class="QxSelection QxSelection_type_text QxSelection_color_brand QxSelection_size_medium css-xzgqft-QxSelection-root"
    data-testid="testStyleParams-disableFocus-false"
    tabindex="-1"
  >
    <div
      class="QxSelection-content css-a7yohm-QxSelection-content"
    >
      <div
        class="QxSelection-controller css-ucexof-QxSelection-controller"
      >
        <label
          class="QxCheckbox QxCheckbox_size_medium QxCheckbox_color_brand QxCheckbox_borderRadius_medium css-1lgh59g-QxCheckbox-root"
        >
          <input
            class="QxCheckbox-input css-zk3nke-QxCheckbox-input"
            tabindex="0"
            type="checkbox"
            value=""
          />
          <div
            class="QxCheckbox-checkboxContainer css-elag4i-QxCheckbox-checkboxContainer"
          >
            <div
              class="QxCheckbox-overlay css-14q538t-QxCheckbox-overlay"
            >
              <svg
                class="QxCheckbox-icon css-7yff3i-QxCheckbox-icon"
                fill="currentcolor"
                height="8"
                viewBox="0 0 11 8"
                width="11"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M2.03616 3.36025C1.68516 3.00925 1.11546 3.00925 0.763559 3.36025C0.411659 3.71215 0.411659 4.28185 0.763559 4.63375L4.09896 7.96915L10.1398 1.93645C10.4917 1.58545 10.4917 1.01575 10.1407 0.663847C9.78876 0.312847 9.21906 0.311947 8.86716 0.662947L4.09986 5.42395L2.03616 3.36025Z"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </div>
        </label>
      </div>
      <div
        class="QxSelection-texts css-zluihr-QxSelection-texts"
      >
        <span
          class="QxSelection-title css-11ny95e-QxSelection-title"
        >
          Title
        </span>
        <span
          class="QxSelection-description css-11pkris-QxSelection-description"
        >
          Description
        </span>
        <span
          class="QxSelection-helperText css-1ch7yhl-QxSelection-helperText"
        >
          HelperText
        </span>
      </div>
    </div>
  </label>
</DocumentFragment>
`;

exports[`Selection style params disableFocus true 1`] = `
<DocumentFragment>
  <label
    class="QxSelection QxSelection_type_text QxSelection_disableFocus QxSelection_color_brand QxSelection_size_medium css-xzgqft-QxSelection-root"
    data-testid="testStyleParams-disableFocus-true"
    tabindex="-1"
  >
    <div
      class="QxSelection-content css-a7yohm-QxSelection-content"
    >
      <div
        class="QxSelection-controller css-ucexof-QxSelection-controller"
      >
        <label
          class="QxCheckbox QxCheckbox_size_medium QxCheckbox_color_brand QxCheckbox_borderRadius_medium css-1lgh59g-QxCheckbox-root"
        >
          <input
            class="QxCheckbox-input css-zk3nke-QxCheckbox-input"
            tabindex="0"
            type="checkbox"
            value=""
          />
          <div
            class="QxCheckbox-checkboxContainer css-elag4i-QxCheckbox-checkboxContainer"
          >
            <div
              class="QxCheckbox-overlay css-14q538t-QxCheckbox-overlay"
            >
              <svg
                class="QxCheckbox-icon css-7yff3i-QxCheckbox-icon"
                fill="currentcolor"
                height="8"
                viewBox="0 0 11 8"
                width="11"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M2.03616 3.36025C1.68516 3.00925 1.11546 3.00925 0.763559 3.36025C0.411659 3.71215 0.411659 4.28185 0.763559 4.63375L4.09896 7.96915L10.1398 1.93645C10.4917 1.58545 10.4917 1.01575 10.1407 0.663847C9.78876 0.312847 9.21906 0.311947 8.86716 0.662947L4.09986 5.42395L2.03616 3.36025Z"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </div>
        </label>
      </div>
      <div
        class="QxSelection-texts css-zluihr-QxSelection-texts"
      >
        <span
          class="QxSelection-title css-11ny95e-QxSelection-title"
        >
          Title
        </span>
        <span
          class="QxSelection-description css-11pkris-QxSelection-description"
        >
          Description
        </span>
        <span
          class="QxSelection-helperText css-1ch7yhl-QxSelection-helperText"
        >
          HelperText
        </span>
      </div>
    </div>
  </label>
</DocumentFragment>
`;

exports[`Selection style params disabled false 1`] = `
<DocumentFragment>
  <label
    class="QxSelection QxSelection_type_text QxSelection_color_brand QxSelection_size_medium css-xzgqft-QxSelection-root"
    data-testid="testStyleParams-disabled-false"
    tabindex="-1"
  >
    <div
      class="QxSelection-content css-a7yohm-QxSelection-content"
    >
      <div
        class="QxSelection-controller css-ucexof-QxSelection-controller"
      >
        <label
          class="QxCheckbox QxCheckbox_size_medium QxCheckbox_color_brand QxCheckbox_borderRadius_medium css-1lgh59g-QxCheckbox-root"
        >
          <input
            class="QxCheckbox-input css-zk3nke-QxCheckbox-input"
            tabindex="0"
            type="checkbox"
            value=""
          />
          <div
            class="QxCheckbox-checkboxContainer css-elag4i-QxCheckbox-checkboxContainer"
          >
            <div
              class="QxCheckbox-overlay css-14q538t-QxCheckbox-overlay"
            >
              <svg
                class="QxCheckbox-icon css-7yff3i-QxCheckbox-icon"
                fill="currentcolor"
                height="8"
                viewBox="0 0 11 8"
                width="11"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M2.03616 3.36025C1.68516 3.00925 1.11546 3.00925 0.763559 3.36025C0.411659 3.71215 0.411659 4.28185 0.763559 4.63375L4.09896 7.96915L10.1398 1.93645C10.4917 1.58545 10.4917 1.01575 10.1407 0.663847C9.78876 0.312847 9.21906 0.311947 8.86716 0.662947L4.09986 5.42395L2.03616 3.36025Z"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </div>
        </label>
      </div>
      <div
        class="QxSelection-texts css-zluihr-QxSelection-texts"
      >
        <span
          class="QxSelection-title css-11ny95e-QxSelection-title"
        >
          Title
        </span>
        <span
          class="QxSelection-description css-11pkris-QxSelection-description"
        >
          Description
        </span>
        <span
          class="QxSelection-helperText css-1ch7yhl-QxSelection-helperText"
        >
          HelperText
        </span>
      </div>
    </div>
  </label>
</DocumentFragment>
`;

exports[`Selection style params disabled true 1`] = `
<DocumentFragment>
  <label
    class="QxSelection QxSelection_type_text QxSelection_disabled QxSelection_color_brand QxSelection_size_medium css-r7xesu-QxSelection-root"
    data-testid="testStyleParams-disabled-true"
    tabindex="-1"
  >
    <div
      class="QxSelection-content css-a7yohm-QxSelection-content"
    >
      <div
        class="QxSelection-controller css-ucexof-QxSelection-controller"
      >
        <label
          class="QxCheckbox QxCheckbox_size_medium QxCheckbox_color_brand QxCheckbox_disabled QxCheckbox_borderRadius_medium css-1hqh6a0-QxCheckbox-root"
        >
          <input
            class="QxCheckbox-input css-zk3nke-QxCheckbox-input"
            disabled=""
            tabindex="0"
            type="checkbox"
            value=""
          />
          <div
            class="QxCheckbox-checkboxContainer css-fi5oz-QxCheckbox-checkboxContainer"
          >
            <div
              class="QxCheckbox-overlay css-14q538t-QxCheckbox-overlay"
            >
              <svg
                class="QxCheckbox-icon css-1s5ihd5-QxCheckbox-icon"
                fill="currentcolor"
                height="8"
                viewBox="0 0 11 8"
                width="11"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M2.03616 3.36025C1.68516 3.00925 1.11546 3.00925 0.763559 3.36025C0.411659 3.71215 0.411659 4.28185 0.763559 4.63375L4.09896 7.96915L10.1398 1.93645C10.4917 1.58545 10.4917 1.01575 10.1407 0.663847C9.78876 0.312847 9.21906 0.311947 8.86716 0.662947L4.09986 5.42395L2.03616 3.36025Z"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </div>
        </label>
      </div>
      <div
        class="QxSelection-texts css-zluihr-QxSelection-texts"
      >
        <span
          class="QxSelection-title css-53q8a3-QxSelection-title"
        >
          Title
        </span>
        <span
          class="QxSelection-description css-1w8cebd-QxSelection-description"
        >
          Description
        </span>
        <span
          class="QxSelection-helperText css-1a8dxpi-QxSelection-helperText"
        >
          HelperText
        </span>
      </div>
    </div>
  </label>
</DocumentFragment>
`;

exports[`Selection style params hover false 1`] = `
<DocumentFragment>
  <label
    class="QxSelection QxSelection_type_text QxSelection_color_brand QxSelection_size_medium css-xzgqft-QxSelection-root"
    data-testid="testStyleParams-hover-false"
    tabindex="-1"
  >
    <div
      class="QxSelection-content css-a7yohm-QxSelection-content"
    >
      <div
        class="QxSelection-controller css-ucexof-QxSelection-controller"
      >
        <label
          class="QxCheckbox QxCheckbox_size_medium QxCheckbox_color_brand QxCheckbox_borderRadius_medium css-1lgh59g-QxCheckbox-root"
        >
          <input
            class="QxCheckbox-input css-zk3nke-QxCheckbox-input"
            tabindex="0"
            type="checkbox"
            value=""
          />
          <div
            class="QxCheckbox-checkboxContainer css-elag4i-QxCheckbox-checkboxContainer"
          >
            <div
              class="QxCheckbox-overlay css-14q538t-QxCheckbox-overlay"
            >
              <svg
                class="QxCheckbox-icon css-7yff3i-QxCheckbox-icon"
                fill="currentcolor"
                height="8"
                viewBox="0 0 11 8"
                width="11"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M2.03616 3.36025C1.68516 3.00925 1.11546 3.00925 0.763559 3.36025C0.411659 3.71215 0.411659 4.28185 0.763559 4.63375L4.09896 7.96915L10.1398 1.93645C10.4917 1.58545 10.4917 1.01575 10.1407 0.663847C9.78876 0.312847 9.21906 0.311947 8.86716 0.662947L4.09986 5.42395L2.03616 3.36025Z"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </div>
        </label>
      </div>
      <div
        class="QxSelection-texts css-zluihr-QxSelection-texts"
      >
        <span
          class="QxSelection-title css-11ny95e-QxSelection-title"
        >
          Title
        </span>
        <span
          class="QxSelection-description css-11pkris-QxSelection-description"
        >
          Description
        </span>
        <span
          class="QxSelection-helperText css-1ch7yhl-QxSelection-helperText"
        >
          HelperText
        </span>
      </div>
    </div>
  </label>
</DocumentFragment>
`;

exports[`Selection style params hover true 1`] = `
<DocumentFragment>
  <label
    class="QxSelection QxSelection_type_text QxSelection_hover QxSelection_color_brand QxSelection_size_medium css-xzgqft-QxSelection-root"
    data-testid="testStyleParams-hover-true"
    tabindex="-1"
  >
    <div
      class="QxSelection-content css-a7yohm-QxSelection-content"
    >
      <div
        class="QxSelection-controller css-ucexof-QxSelection-controller"
      >
        <label
          class="QxCheckbox QxCheckbox_size_medium QxCheckbox_color_brand QxCheckbox_borderRadius_medium QxCheckbox_hover css-1lgh59g-QxCheckbox-root"
        >
          <input
            class="QxCheckbox-input css-zk3nke-QxCheckbox-input"
            tabindex="0"
            type="checkbox"
            value=""
          />
          <div
            class="QxCheckbox-checkboxContainer css-elag4i-QxCheckbox-checkboxContainer"
          >
            <div
              class="QxCheckbox-overlay css-f6d59j-QxCheckbox-overlay"
            >
              <svg
                class="QxCheckbox-icon css-prscq3-QxCheckbox-icon"
                fill="currentcolor"
                height="8"
                viewBox="0 0 11 8"
                width="11"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M2.03616 3.36025C1.68516 3.00925 1.11546 3.00925 0.763559 3.36025C0.411659 3.71215 0.411659 4.28185 0.763559 4.63375L4.09896 7.96915L10.1398 1.93645C10.4917 1.58545 10.4917 1.01575 10.1407 0.663847C9.78876 0.312847 9.21906 0.311947 8.86716 0.662947L4.09986 5.42395L2.03616 3.36025Z"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </div>
        </label>
      </div>
      <div
        class="QxSelection-texts css-zluihr-QxSelection-texts"
      >
        <span
          class="QxSelection-title css-11ny95e-QxSelection-title"
        >
          Title
        </span>
        <span
          class="QxSelection-description css-11pkris-QxSelection-description"
        >
          Description
        </span>
        <span
          class="QxSelection-helperText css-1ch7yhl-QxSelection-helperText"
        >
          HelperText
        </span>
      </div>
    </div>
  </label>
</DocumentFragment>
`;

exports[`Selection style params reverse false 1`] = `
<DocumentFragment>
  <label
    class="QxSelection QxSelection_type_text QxSelection_color_brand QxSelection_size_medium css-xzgqft-QxSelection-root"
    data-testid="testStyleParams-reverse-false"
    tabindex="-1"
  >
    <div
      class="QxSelection-content css-a7yohm-QxSelection-content"
    >
      <div
        class="QxSelection-controller css-ucexof-QxSelection-controller"
      >
        <label
          class="QxCheckbox QxCheckbox_size_medium QxCheckbox_color_brand QxCheckbox_borderRadius_medium css-1lgh59g-QxCheckbox-root"
        >
          <input
            class="QxCheckbox-input css-zk3nke-QxCheckbox-input"
            tabindex="0"
            type="checkbox"
            value=""
          />
          <div
            class="QxCheckbox-checkboxContainer css-elag4i-QxCheckbox-checkboxContainer"
          >
            <div
              class="QxCheckbox-overlay css-14q538t-QxCheckbox-overlay"
            >
              <svg
                class="QxCheckbox-icon css-7yff3i-QxCheckbox-icon"
                fill="currentcolor"
                height="8"
                viewBox="0 0 11 8"
                width="11"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M2.03616 3.36025C1.68516 3.00925 1.11546 3.00925 0.763559 3.36025C0.411659 3.71215 0.411659 4.28185 0.763559 4.63375L4.09896 7.96915L10.1398 1.93645C10.4917 1.58545 10.4917 1.01575 10.1407 0.663847C9.78876 0.312847 9.21906 0.311947 8.86716 0.662947L4.09986 5.42395L2.03616 3.36025Z"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </div>
        </label>
      </div>
      <div
        class="QxSelection-texts css-zluihr-QxSelection-texts"
      >
        <span
          class="QxSelection-title css-11ny95e-QxSelection-title"
        >
          Title
        </span>
        <span
          class="QxSelection-description css-11pkris-QxSelection-description"
        >
          Description
        </span>
        <span
          class="QxSelection-helperText css-1ch7yhl-QxSelection-helperText"
        >
          HelperText
        </span>
      </div>
    </div>
  </label>
</DocumentFragment>
`;

exports[`Selection style params reverse true 1`] = `
<DocumentFragment>
  <label
    class="QxSelection QxSelection_type_text QxSelection_reverse QxSelection_color_brand QxSelection_size_medium css-1pe3v44-QxSelection-root"
    data-testid="testStyleParams-reverse-true"
    tabindex="-1"
  >
    <div
      class="QxSelection-content css-1w3j8qq-QxSelection-content"
    >
      <div
        class="QxSelection-controller css-ocgwhx-QxSelection-controller"
      >
        <label
          class="QxCheckbox QxCheckbox_size_medium QxCheckbox_color_brand QxCheckbox_borderRadius_medium css-1lgh59g-QxCheckbox-root"
        >
          <input
            class="QxCheckbox-input css-zk3nke-QxCheckbox-input"
            tabindex="0"
            type="checkbox"
            value=""
          />
          <div
            class="QxCheckbox-checkboxContainer css-elag4i-QxCheckbox-checkboxContainer"
          >
            <div
              class="QxCheckbox-overlay css-14q538t-QxCheckbox-overlay"
            >
              <svg
                class="QxCheckbox-icon css-7yff3i-QxCheckbox-icon"
                fill="currentcolor"
                height="8"
                viewBox="0 0 11 8"
                width="11"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M2.03616 3.36025C1.68516 3.00925 1.11546 3.00925 0.763559 3.36025C0.411659 3.71215 0.411659 4.28185 0.763559 4.63375L4.09896 7.96915L10.1398 1.93645C10.4917 1.58545 10.4917 1.01575 10.1407 0.663847C9.78876 0.312847 9.21906 0.311947 8.86716 0.662947L4.09986 5.42395L2.03616 3.36025Z"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </div>
        </label>
      </div>
      <div
        class="QxSelection-texts css-zluihr-QxSelection-texts"
      >
        <span
          class="QxSelection-title css-11ny95e-QxSelection-title"
        >
          Title
        </span>
        <span
          class="QxSelection-description css-11pkris-QxSelection-description"
        >
          Description
        </span>
        <span
          class="QxSelection-helperText css-1ch7yhl-QxSelection-helperText"
        >
          HelperText
        </span>
      </div>
    </div>
  </label>
</DocumentFragment>
`;

exports[`Selection style params size large 1`] = `
<DocumentFragment>
  <label
    class="QxSelection QxSelection_type_text QxSelection_color_brand QxSelection_size_large css-xzgqft-QxSelection-root"
    data-testid="testStyleParams-size-large"
    tabindex="-1"
  >
    <div
      class="QxSelection-content css-a7yohm-QxSelection-content"
    >
      <div
        class="QxSelection-controller css-18fr50e-QxSelection-controller"
      >
        <label
          class="QxCheckbox QxCheckbox_size_large QxCheckbox_color_brand QxCheckbox_borderRadius_medium css-1lgh59g-QxCheckbox-root"
        >
          <input
            class="QxCheckbox-input css-zk3nke-QxCheckbox-input"
            tabindex="0"
            type="checkbox"
            value=""
          />
          <div
            class="QxCheckbox-checkboxContainer css-knuj0s-QxCheckbox-checkboxContainer"
          >
            <div
              class="QxCheckbox-overlay css-14q538t-QxCheckbox-overlay"
            >
              <svg
                class="QxCheckbox-icon css-1e8v94r-QxCheckbox-icon"
                fill="currentcolor"
                height="9"
                viewBox="0 0 12 9"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M2.37363 3.289C1.98363 2.899 1.35063 2.899 0.959632 3.289C0.568632 3.68 0.568632 4.313 0.959632 4.704L4.66563 8.41L11.3776 1.707C11.7686 1.317 11.7686 0.684 11.3786 0.293C10.9876 -0.0969995 10.3546 -0.0979995 9.96363 0.292L4.66663 5.582L2.37363 3.289Z"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </div>
        </label>
      </div>
      <div
        class="QxSelection-texts css-zluihr-QxSelection-texts"
      >
        <span
          class="QxSelection-title css-xzu70x-QxSelection-title"
        >
          Title
        </span>
        <span
          class="QxSelection-description css-1nnabbv-QxSelection-description"
        >
          Description
        </span>
        <span
          class="QxSelection-helperText css-8tg7is-QxSelection-helperText"
        >
          HelperText
        </span>
      </div>
    </div>
  </label>
</DocumentFragment>
`;

exports[`Selection style params size medium 1`] = `
<DocumentFragment>
  <label
    class="QxSelection QxSelection_type_text QxSelection_color_brand QxSelection_size_medium css-xzgqft-QxSelection-root"
    data-testid="testStyleParams-size-medium"
    tabindex="-1"
  >
    <div
      class="QxSelection-content css-a7yohm-QxSelection-content"
    >
      <div
        class="QxSelection-controller css-ucexof-QxSelection-controller"
      >
        <label
          class="QxCheckbox QxCheckbox_size_medium QxCheckbox_color_brand QxCheckbox_borderRadius_medium css-1lgh59g-QxCheckbox-root"
        >
          <input
            class="QxCheckbox-input css-zk3nke-QxCheckbox-input"
            tabindex="0"
            type="checkbox"
            value=""
          />
          <div
            class="QxCheckbox-checkboxContainer css-elag4i-QxCheckbox-checkboxContainer"
          >
            <div
              class="QxCheckbox-overlay css-14q538t-QxCheckbox-overlay"
            >
              <svg
                class="QxCheckbox-icon css-7yff3i-QxCheckbox-icon"
                fill="currentcolor"
                height="8"
                viewBox="0 0 11 8"
                width="11"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M2.03616 3.36025C1.68516 3.00925 1.11546 3.00925 0.763559 3.36025C0.411659 3.71215 0.411659 4.28185 0.763559 4.63375L4.09896 7.96915L10.1398 1.93645C10.4917 1.58545 10.4917 1.01575 10.1407 0.663847C9.78876 0.312847 9.21906 0.311947 8.86716 0.662947L4.09986 5.42395L2.03616 3.36025Z"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </div>
        </label>
      </div>
      <div
        class="QxSelection-texts css-zluihr-QxSelection-texts"
      >
        <span
          class="QxSelection-title css-11ny95e-QxSelection-title"
        >
          Title
        </span>
        <span
          class="QxSelection-description css-11pkris-QxSelection-description"
        >
          Description
        </span>
        <span
          class="QxSelection-helperText css-1ch7yhl-QxSelection-helperText"
        >
          HelperText
        </span>
      </div>
    </div>
  </label>
</DocumentFragment>
`;

exports[`Selection style params size small 1`] = `
<DocumentFragment>
  <label
    class="QxSelection QxSelection_type_text QxSelection_color_brand QxSelection_size_small css-xzgqft-QxSelection-root"
    data-testid="testStyleParams-size-small"
    tabindex="-1"
  >
    <div
      class="QxSelection-content css-a7yohm-QxSelection-content"
    >
      <div
        class="QxSelection-controller css-4fgvbz-QxSelection-controller"
      >
        <label
          class="QxCheckbox QxCheckbox_size_small QxCheckbox_color_brand QxCheckbox_borderRadius_medium css-1lgh59g-QxCheckbox-root"
        >
          <input
            class="QxCheckbox-input css-zk3nke-QxCheckbox-input"
            tabindex="0"
            type="checkbox"
            value=""
          />
          <div
            class="QxCheckbox-checkboxContainer css-1dz3o29-QxCheckbox-checkboxContainer"
          >
            <div
              class="QxCheckbox-overlay css-14q538t-QxCheckbox-overlay"
            >
              <svg
                class="QxCheckbox-icon css-qqupxm-QxCheckbox-icon"
                fill="currentcolor"
                height="8"
                viewBox="0 0 10 8"
                width="10"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M1.69881 3.43125C1.38681 3.11925 0.880408 3.11925 0.567608 3.43125C0.254808 3.74405 0.254808 4.25045 0.567608 4.56325L3.53241 7.52805L8.90201 2.16565C9.21481 1.85365 9.21481 1.34725 8.90281 1.03445C8.59001 0.722449 8.08361 0.721649 7.77081 1.03365L3.53321 5.26565L1.69881 3.43125Z"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </div>
        </label>
      </div>
      <div
        class="QxSelection-texts css-zluihr-QxSelection-texts"
      >
        <span
          class="QxSelection-title css-81jp23-QxSelection-title"
        >
          Title
        </span>
        <span
          class="QxSelection-description css-11pkris-QxSelection-description"
        >
          Description
        </span>
        <span
          class="QxSelection-helperText css-1ch7yhl-QxSelection-helperText"
        >
          HelperText
        </span>
      </div>
    </div>
  </label>
</DocumentFragment>
`;

exports[`Selection style params type contained 1`] = `
<DocumentFragment>
  <label
    class="QxSelection QxSelection_type_contained QxSelection_color_brand QxSelection_size_medium css-nnunrm-QxSelection-root"
    data-testid="testStyleParams-type-contained"
    tabindex="0"
  >
    <div
      class="QxSelection-content css-a7yohm-QxSelection-content"
    >
      <div
        class="QxSelection-controller css-ucexof-QxSelection-controller"
      >
        <label
          class="QxCheckbox QxCheckbox_size_medium QxCheckbox_color_brand QxCheckbox_borderRadius_medium QxCheckbox_disableFocus css-1lgh59g-QxCheckbox-root"
        >
          <input
            class="QxCheckbox-input css-18ihdh7-QxCheckbox-input"
            tabindex="-1"
            type="checkbox"
            value=""
          />
          <div
            class="QxCheckbox-checkboxContainer css-elag4i-QxCheckbox-checkboxContainer"
          >
            <div
              class="QxCheckbox-overlay css-14q538t-QxCheckbox-overlay"
            >
              <svg
                class="QxCheckbox-icon css-7yff3i-QxCheckbox-icon"
                fill="currentcolor"
                height="8"
                viewBox="0 0 11 8"
                width="11"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M2.03616 3.36025C1.68516 3.00925 1.11546 3.00925 0.763559 3.36025C0.411659 3.71215 0.411659 4.28185 0.763559 4.63375L4.09896 7.96915L10.1398 1.93645C10.4917 1.58545 10.4917 1.01575 10.1407 0.663847C9.78876 0.312847 9.21906 0.311947 8.86716 0.662947L4.09986 5.42395L2.03616 3.36025Z"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </div>
        </label>
      </div>
      <div
        class="QxSelection-texts css-zluihr-QxSelection-texts"
      >
        <span
          class="QxSelection-title css-11ny95e-QxSelection-title"
        >
          Title
        </span>
        <span
          class="QxSelection-description css-11pkris-QxSelection-description"
        >
          Description
        </span>
        <span
          class="QxSelection-helperText css-1ch7yhl-QxSelection-helperText"
        >
          HelperText
        </span>
      </div>
    </div>
  </label>
</DocumentFragment>
`;

exports[`Selection style params type text 1`] = `
<DocumentFragment>
  <label
    class="QxSelection QxSelection_type_text QxSelection_color_brand QxSelection_size_medium css-xzgqft-QxSelection-root"
    data-testid="testStyleParams-type-text"
    tabindex="-1"
  >
    <div
      class="QxSelection-content css-a7yohm-QxSelection-content"
    >
      <div
        class="QxSelection-controller css-ucexof-QxSelection-controller"
      >
        <label
          class="QxCheckbox QxCheckbox_size_medium QxCheckbox_color_brand QxCheckbox_borderRadius_medium css-1lgh59g-QxCheckbox-root"
        >
          <input
            class="QxCheckbox-input css-zk3nke-QxCheckbox-input"
            tabindex="0"
            type="checkbox"
            value=""
          />
          <div
            class="QxCheckbox-checkboxContainer css-elag4i-QxCheckbox-checkboxContainer"
          >
            <div
              class="QxCheckbox-overlay css-14q538t-QxCheckbox-overlay"
            >
              <svg
                class="QxCheckbox-icon css-7yff3i-QxCheckbox-icon"
                fill="currentcolor"
                height="8"
                viewBox="0 0 11 8"
                width="11"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M2.03616 3.36025C1.68516 3.00925 1.11546 3.00925 0.763559 3.36025C0.411659 3.71215 0.411659 4.28185 0.763559 4.63375L4.09896 7.96915L10.1398 1.93645C10.4917 1.58545 10.4917 1.01575 10.1407 0.663847C9.78876 0.312847 9.21906 0.311947 8.86716 0.662947L4.09986 5.42395L2.03616 3.36025Z"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </div>
        </label>
      </div>
      <div
        class="QxSelection-texts css-zluihr-QxSelection-texts"
      >
        <span
          class="QxSelection-title css-11ny95e-QxSelection-title"
        >
          Title
        </span>
        <span
          class="QxSelection-description css-11pkris-QxSelection-description"
        >
          Description
        </span>
        <span
          class="QxSelection-helperText css-1ch7yhl-QxSelection-helperText"
        >
          HelperText
        </span>
      </div>
    </div>
  </label>
</DocumentFragment>
`;
